tweaked button not centered issue on mobile

--- a/src/Buttons/style.css
+++ b/src/Buttons/style.css
@@ -1,3 +1,10 @@
+@media (max-width: 767px) {
+  .buttons {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+}
+
 .buttons__button {
   border: none;
   background: #fff;
